# fx-utils

./: .gitignore  README.md  environment.yml  pyproject.toml
config/: accounts.example.yaml  credentials.example.env  watchers.example.yaml
fx_utils/: candles.py  cli.py  client.py  config.py  currency_colors.py  indicators.py  launcher.py  notify.py  pair_nicknames.py  pairs.py  positions.py  strength.py  terminal_viz.py  volume.py  watchers.py
scripts/: currency_strength_meter.py  launch_trailing_stops.py  notional_volume.py  trailing_ema_close.py
tests/: test_indicators.py  test_pair_nicknames.py  test_pairs.py  test_positions.py  test_strength.py  test_terminal_viz.py  test_watchers.py
