[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fx-utils"
version = "0.1.0"
description = "Interactive CLI utilities for the OANDA v20 REST API"
requires-python = ">=3.10"
dependencies = [
    "oandapyV20",
    "pandas",
    "numpy",
    "requests",
    "python-dotenv",
    "click",
    "pyyaml",
]

[tool.setuptools.packages.find]
include = ["fx_utils*"]

[project.scripts]
fx-utils = "fx_utils.cli:main"
